tests/bad/forward-no-impl.pas
program forward_no_impl;

function f(x): int64; forward;

begin
    WriteLn(1)
end.
